replaced collector.toList with toList